feat: implement credits purchase
