# packages/backend/app/tg/credits/models.py
@@ -1,9 +1,10 @@
 import enum
 
+from pydantic import BaseModel
 from sqlalchemy import BigInteger, CheckConstraint, Enum, ForeignKey, Index
 from sqlalchemy.orm import Mapped, mapped_column
 
-from app.models.base import RecordModel
+from app.models.base import PydanticJSON, RecordModel
 
 
 class CreditsTxStatus(str, enum.Enum):
@@ -35,6 +36,56 @@ class TGUserCreditsTx(RecordModel):
         default=CreditsTxStatus.LOCKED,
         nullable=False,
     )
+
+    # Foreign keys
+    tg_user_id: Mapped[int | None] = mapped_column(
+        ForeignKey("tgbot_tg_users.tg_id", ondelete="SET NULL"),
+        nullable=True,
+        index=True,
+    )
+
+
+class CreditsPurchaseStatus(str, enum.Enum):
+    INITIAL = "initial"
+    CONFIRMED = "confirmed"
+    COMPLETED = "completed"
+
+
+class StarsPurchaseMetadata(BaseModel):
+    telegram_payment_charge_id: str | None = None
+    provider_payment_charge_id: str | None = None
+    stars_amount: int
+    package_name: str
+
+
+class TGUserCreditsPurchase(RecordModel):
+    __tablename__ = "tg_user_credits_purchases"
+    __table_args__ = (
+        Index(
+            "ix_tg_user_credits_transactions__hanging_purchases",
+            "status",
+            "created_at",
+        ),
+    )
+
+    credits_amount: Mapped[int] = mapped_column(BigInteger, nullable=False)
+    package_name: Mapped[str] = mapped_column(nullable=False)
+
+    metadata_: Mapped[StarsPurchaseMetadata] = mapped_column(
+        "metadata",
+        PydanticJSON(StarsPurchaseMetadata, none_as_null=True),
+        nullable=True,
+    )
+    status: Mapped[CreditsPurchaseStatus] = mapped_column(
+        Enum(
+            CreditsPurchaseStatus,
+            name="tg_user_credits_purchase_status",
+            values_callable=lambda e: [i.value for i in e],
+        ),
+        default=CreditsPurchaseStatus.INITIAL,
+        nullable=False,
+    )
+
     # Foreign keys
     tg_user_id: Mapped[int | None] = mapped_column(
         ForeignKey("tgbot_tg_users.tg_id", ondelete="SET NULL"),
